opam-version: "1.2"
name: "dtc"
version: "0.1"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-dtc"
doc: "https://vbmithr.github.io/ocaml-dtc/doc"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-dtc.git"
bug-reports: "https://github.com/vbmithr/ocaml-dtc/issues"
tags: []
available: [ ocaml-version >= "4.02.0"]
depends: [
  "jbuilder" {build}
  "core"
  "cstruct"
  "scid"
]
depopts: [
  "leveldb"
]
conflicts: [
  "leveldb" {< "1.1.2"}
]
build:[ "jbuilder" "build" "@install" ]

